@@ -1,7 +1,7 @@
 /* Extended Module Player
  * Copyright (C) 1996-2006 Claudio Matsuoka and Hipolito Carraro Jr
  *
- * $Id: load.c,v 1.10 2006-02-14 00:10:23 cmatsuoka Exp $
+ * $Id: load.c,v 1.11 2007-08-10 17:53:21 cmatsuoka Exp $
  *
  * This file is part of the Extended Module Player and is distributed
  * under the terms of the GNU General Public License. See doc/COPYING
@@ -25,7 +25,7 @@
 
 extern struct xmp_fmt_info *__fmt_head;
 
-#include "../prowizard/list.h"
+#include "list.h"
 #include "../prowizard/prowiz.h"
 
 extern struct list_head *checked_format;
